bevy_asset_loader/tests/ui_with_2d_3d_features/key_and_any_other_attribute.stderr
error: The 'key' attribute cannot be combined with any other asset defining attributes
 --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:8:5
  |
8 | /     #[asset(path = "test.ogg", key = "test")]
9 | |     test: Handle<AudioSource>,
  | |_____________________________^

error: The 'key' attribute cannot be combined with any other asset defining attributes
  --> tests/ui_with_2d_3d_features/key_and_any_other_attribute.rs:14:5
   |
14 | /     #[asset(standard_material)]
15 | |     #[asset(key = "test")]
16 | |     test: Handle<StandardMaterial>,
   | |__________________________________^
